<resources>
    <string name="app_name">PLT</string>
    <string name="app_full_name">PRETTYLITTLETHING</string>
    <string name="title_activity_bottom_navigation_">BottomNavigation_Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_niv_bar">BottomNivBarActivity</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="xsmall">XS</string>
    <string name="small">S</string>
    <string name="medium">M</string>
    <string name="large">L</string>
    <string name="xlarge">XL</string>
    <string name="select_size">Select size*</string>
    <string name="tab_1">Home</string>
    <string name="tab_2">Shop</string>
    <string name="tab_3">Bag</string>
    <string name="tab_4">Wishlist</string>
    <string name="tab_5">My PLT</string>


</resources>
